feat : integrate swagger, fix gateway routing