@@ -1,18 +1,17 @@
 package com.example.user.config;
 
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.info.Info;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
-import io.swagger.v3.oas.models.media.StringSchema;
-import io.swagger.v3.oas.models.parameters.Parameter;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -21,27 +20,26 @@ import java.util.List;
                 title = "API Documentation",
                 version = "1.0.0", // OpenAPI 버전
                 description = "User API Documentation"
-        )
-//        security = @io.swagger.v3.oas.annotations.security.SecurityRequirement(name = "Authorization")
+        ),
+        security = @io.swagger.v3.oas.annotations.security.SecurityRequirement(name = "Authorization")
 )
 public class SwaggerConfig {
 
     @Bean
     public OpenAPI openAPI() {
+        SecurityScheme securityScheme = new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name("Authorization");
+
+        SecurityRequirement securityRequirement = new SecurityRequirement()
+                .addList("Authorization");
+
         return new OpenAPI()
-//                .components(new Components()
-//                        .addSecuritySchemes("Authorization",
-//                                new SecurityScheme()
-//                                        .type(SecurityScheme.Type.HTTP)
-//                                        .scheme("bearer")
-//                                        .bearerFormat("JWT")
-//                                        .in(SecurityScheme.In.HEADER)
-//                                        .name("Authorization")
-//                        )
-//                )
-                .servers(List.of(
-                        new Server().url("http://localhost:8080/api/users") // gateway 의 경로로 수정
-                ));
-//                .addSecurityItem(new SecurityRequirement().addList("Authorization"));
+                .components(new Components().addSecuritySchemes("Authorization", securityScheme))
+                .security(Collections.singletonList(securityRequirement))
+                .addServersItem(new Server().url("http://localhost:8080/api/user-server"));
     }
 }
